[gd_scene load_steps=5 format=3 uid="uid://b220owu4fv8ix"]

[ext_resource type="Script" path="res://Scripts/Game/enemy_bulwark.gd" id="1_e3qtu"]
[ext_resource type="Texture2D" uid="uid://caclei7slj4ea" path="res://Sprites/Sheets/Ship_Bulwark.png" id="2_4s43b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u2ge1"]
radius = 17.0
height = 104.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbnx5"]
size = Vector2(14.5, 32)

[node name="EnemyBulwark" type="Area2D"]
process_mode = 3
collision_layer = 4
collision_mask = 10
input_pickable = false
priority = 50
script = ExtResource("1_e3qtu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4s43b")
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 0)
shape = SubResource("CapsuleShape2D_u2ge1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-31, 0)
shape = SubResource("RectangleShape2D_hbnx5")

[node name="MuzzleMain" type="Node2D" parent="."]
position = Vector2(-4, 0)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleMain"]
visible = false
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="MuzzleLeft" type="Node2D" parent="."]
position = Vector2(17, -23)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleLeft"]
visible = false
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="MuzzleLeft2" type="Node2D" parent="."]
position = Vector2(5, -45)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleLeft2"]
visible = false
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="MuzzleRight" type="Node2D" parent="."]
position = Vector2(17, 23)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleRight"]
visible = false
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="MuzzleRight2" type="Node2D" parent="."]
position = Vector2(5, 45)

[node name="DEBUGColorRect" type="ColorRect" parent="MuzzleRight2"]
visible = false
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(10, 8.116)

[node name="Shoot" type="Timer" parent="."]

[node name="ShootAlt" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="ShootAlt" to="." method="_on_shoot_alt_timeout"]
